@@ -3,6 +3,6 @@
 <!ENTITY gst-plugins-version-stable "0.8.6">
 <!ENTITY gst-plugins-version-devel "0.7.6">
 <!ENTITY gst-bug-report "http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer">
-<!ENTITY gst-cvs-http "http://freedesktop.org/cgi-bin/viewcvs.cgi/gstreamer/">
+<!ENTITY gst-cvs-http "http://cvs.freedesktop.org/gstreamer/">
 <!ENTITY realsite "http://gstreamer.freedesktop.org">
 <!ENTITY nbsp "&#x00A0;">
